Ajustes na camada de testes